Prepare for 1st release
Signed-off-by: Andy Dorfman <umaritimus@users.noreply.github.com>

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,4 +3,6 @@
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+    stdlib: "puppetlabs/stdlib"
+    pwshlib: "puppetlabs/pwshlib"
+    powershell: "puppetlabs/powershell"
