Convert to PDK 2.4 and generate 0.2.0 release
Signed-off-by: Andy Dorfman <umaritimus@users.noreply.github.com>

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,4 @@
 ---
 fixtures:
   forge_modules:
-    stdlib: "puppetlabs/stdlib"
-    pwshlib: "puppetlabs/pwshlib"
-    powershell: "puppetlabs/powershell"
+#     stdlib: "puppetlabs/stdlib"
