--- a/.sync.yml
+++ b/.sync.yml
@@ -1,3 +1,8 @@
----
-spec/spec_helper.rb:
-  mock_with: ':rspec'
+# This file can be used to customize the files managed by PDK.
+#
+# See https://github.com/puppetlabs/pdk-templates/blob/main/README.md
+# for more information.
+#
+# See https://github.com/puppetlabs/pdk-templates/blob/main/config_defaults.yml
+# for the default values.
+--- {}
